Avoid page breaks inside lists

--- a/app/css/print.css
+++ b/app/css/print.css
@@ -17,7 +17,9 @@
 }
 
 p,
-pre {
+pre,
+ol,
+ul {
     page-break-inside: avoid;
 }
 
